LiveInput can now handle multiple input elements
